--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <a href="hobbies.html">mancarea preferata</a>
 <br>
-<a href="Contact.html">detalii de contact</a>
+<a href="contact.html">detalii de contact</a>
 </body>
 
 </html>
